--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 <h1>About</h1>
 
 <p>
-Console is a minimal, responsive and light theme for Hugo inspired by Linux console.  <a href="about/">(more)</a>
+Place to overshare stuff about my life  <a href="about/">(more)</a>
 </p>
 <br/>
 
